<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_inner_top_padding"
            android:paddingBottom="@dimen/card_inner_bottom_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/profile_pic"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/inner_card_margin"
                android:layout_marginTop="@dimen/inner_card_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:text="@string/username_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_header_size" />

                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content_size" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/profile_pic"
                android:layout_width="@dimen/profile_pic_size"
                android:layout_height="@dimen/profile_pic_size"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/inner_card_margin"
                app:cardCornerRadius="@dimen/profile_radius">

                <ImageView
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="@dimen/profile_pic_size"
                    android:layout_height="@dimen/profile_pic_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/place_holder_profile" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginTop="@dimen/card_top_margin"
        android:elevation="@dimen/card_elevation"
        android:paddingBottom="@dimen/standard_margin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.3" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/lang_card_margin"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:cardCornerRadius="@dimen/lang_card_radius"
            app:cardElevation="@dimen/standard_margin"
            app:cardMaxElevation="@dimen/standard_margin">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_eng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:src="@drawable/baseline_translate_24"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eng_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/header_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lang_card_margin"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:cardCornerRadius="@dimen/lang_card_radius"
            app:cardElevation="@dimen/standard_margin"
            app:cardMaxElevation="@dimen/standard_margin">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_hi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/standard_margin"
                        app:tint="@color/black"
                        android:src="@drawable/baseline_translate_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hindi_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/header_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.3" />
    </LinearLayout>


</LinearLayout>